# CryptoBot

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: agent.yml  manager.yml
agent/: .env.example  Dockerfile  pyproject.toml  requirements.txt
agent/app/: __init__.py  config.py  heartbeat.py  main.py  manager_ws.py  routes.py  runner.py  runtime_settings.py  schemas.py  version.py
common/: __init__.py  diagnostics.py  models.py  pyproject.toml
common/exchange/: __init__.py  base.py  bitvavo.py  simulated.py
data/: manager.db
manager/: .env.example  Dockerfile  pyproject.toml  requirements.txt
manager/app/: __init__.py  auth.py  database.py  events.py  failover.py  main.py  migrations.py  models.py  schemas.py  version.py
manager/app/routes/: __init__.py  agent_ws.py  agents.py  analytics.py  auth.py  bots.py  debug.py  market.py  settings.py  stream.py  ui_ws.py  users.py
manager/app/services/: __init__.py  agent_client.py  agent_ws_bus.py  backtest.py  coin_map_sync.py  grid_preview.py  runtime_settings.py  settings_store.py
manager/app/static/: base.css  dashboard.css  dashboard.js  i18n.js  index.html  login-app.js  login.css  login.html
manager/app/static/assets/: coin_map.json  tmpcpx78lrz  tmprgb07624
tests/: conftest.py  test_agent_routes.py  test_agent_ws_bus.py  test_auth.py  test_bot_runtime.py  test_database.py  test_endpoints.py  test_events.py  test_exchange.py  test_models.py  test_runner.py  test_services.py  test_strategy.py
(+3 files in other folders)
